# firstRepo

./: .gitignore  BACKWARDS_TREE_DOCUMENTATION.md  CHANGELOG.md  COMMIT_MESSAGE.md  LICENSE  PULL_REQUEST.md  README.md  REVERSE_EVEN_LEVELS_DOCUMENTATION.md  STEPS.md  TREE_DOCUMENTATION.md  ascii_claude.py  backwards_tree.py  claude_ascii.py  claude_ascii_art.py  fib.py  main.py  package.json  plan.md  print_claude_art.py  pyproject.toml  quicksort.py  reverse_forward_node_algorithm.py  test_claude_ascii_art.py  test_tree.py  tree.py
.local-workspaces/ff42786b-b0cd-4330-a3c6-1e640607a4ed/: README.md  claude_ascii_art.py  test_claude_ascii_art.py
docs/: ALGORITHM.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md  IMPLEMENTATION_COMPARISON.md  PROJECT_OVERVIEW.md
examples/: example_usage.py
scratch/: commit_message.txt  design.md  plan.md  pr_description.md  pr_notes.md  qna.md  review_notes.md
scripts/: claude_ascii_art.py
src/: __init__.py  exponentialFibonacci.js  index.js  main.py  prime_counter.py  reverse_backward_node.py  table_utils.py  tree_utils.py  utils.py
src/ascii_art/: __init__.py  claude.py  print_claude.py
src/tictactoe/: __init__.py  board.py  game.py  player.py
test/: exponentialFibonacci.test.js
tests/: test_board.py  test_claude_ascii.py  test_game.py  test_player.py  test_prime_counter.py  test_print_claude.py  test_reverse_backward_node.py  test_table_utils.py  test_tree_utils.py  test_utils.py
